src/objects/Temp_Special_Event_Booking__c.object
<CustomObject>
    <fields>
        <fullName>Attendance_Notes__c</fullName>
        <description>Put note when attendee&apos;s attendance is partial on the course.</description>
        <inlineHelpText>Put note when attendee&apos;s attendance is partial on the course.</inlineHelpText>
        <label>Attendance Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Temp BSC Event Bookings</relationshipLabel>
        <relationshipName>Temp_BSC_Event_Bookings_Company</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Temp BSC Event Bookings</relationshipLabel>
        <relationshipName>Temp_BSC_Event_Bookings_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Temp BSC Event Bookings</relationshipLabel>
        <relationshipName>Temp_BSC_Event_Bookings_Opp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partial_Attendance_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partial Attendance Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Pulls in the related events product name</description>
        <formula>Special_Event__r.Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls in the related events product name</inlineHelpText>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Event__c</fullName>
        <label>BSC Event</label>
        <referenceTo>Special_Event__c</referenceTo>
        <relationshipLabel>Temp BSC Event Bookings</relationshipLabel>
        <relationshipName>Temp_BSC_Event_Bookings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Show</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>isNew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When a new records is inserted, this field will be checked and then used to send a mail with all new delegate records to operations.</description>
        <label>isNew</label>
        <type>Checkbox</type>
    </fields>
    <label>Temp BSC Event Booking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>New-EB-{0000000}</displayFormat>
        <label>Temp Event Booking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Temp BSC Event Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>